@@ -70,23 +70,21 @@ sub fix_headers {
   my $self = shift;
   $self->{fix} ? return $self : $self->SUPER::fix_headers(@_);
 
-  # Basic authentication
+  # Host
   my $url     = $self->url;
   my $headers = $self->headers;
-  my $auth    = $url->userinfo;
-  $headers->authorization('Basic ' . b64_encode($auth, ''))
-    if $auth && !$headers->authorization;
-
-  # Basic proxy authentication
-  if (my $proxy = $self->proxy) {
-    my $proxy_auth = $proxy->userinfo;
-    $headers->proxy_authorization('Basic ' . b64_encode($proxy_auth, ''))
-      if $proxy_auth && !$headers->proxy_authorization;
-  }
-
-  # Host
   $headers->host($url->host_port) unless $headers->host;
 
+  # Basic authentication
+  if ((my $info = $url->userinfo) && !$headers->authorization) {
+    $headers->authorization('Basic ' . b64_encode($info, ''));
+  }
+
+  # Basic proxy authentication
+  return $self unless my $proxy = $self->proxy;
+  return $self unless my $info  = $proxy->userinfo;
+  $headers->proxy_authorization('Basic ' . b64_encode($info, ''))
+    unless $headers->proxy_authorization;
   return $self;
 }
 
@@ -96,25 +94,22 @@ sub get_start_line_chunk {
   unless (defined $self->{start_buffer}) {
 
     # Path
-    my $url   = $self->url;
-    my $path  = $url->path->to_string;
-    my $query = $url->query->to_string;
-    $path .= "?$query" if $query;
+    my $url  = $self->url;
+    my $path = $url->path_query;
     $path = "/$path" unless $path =~ m!^/!;
 
     # CONNECT
     my $method = uc $self->method;
     if ($method eq 'CONNECT') {
       my $port = $url->port || ($url->protocol eq 'https' ? '443' : '80');
-      $path = $url->host . ":$port";
+      $path = $url->ihost . ":$port";
     }
 
     # Proxy
     elsif ($self->proxy) {
-      my $clone = $url = $url->clone->userinfo(undef);
+      $url = $url->clone->userinfo(undef);
       my $upgrade = lc($self->headers->upgrade // '');
-      $path = $clone
-        unless $upgrade eq 'websocket' || $url->protocol eq 'https';
+      $path = $url unless $upgrade eq 'websocket' || $url->protocol eq 'https';
     }
 
     $self->{start_buffer} = "$method $path HTTP/@{[$self->version]}\x0d\x0a";
